applications/v5/backend/src/main/java/com/example/weeklyplanning/web/rest/errors/UnprocessableEntityException.java
package com.example.weeklyplanning.web.rest.errors;

public class UnprocessableEntityException extends RuntimeException {

    public UnprocessableEntityException(String message) {
        super(message);
    }
}
